# rainforest-test-proj

./: .dockerignore  .env  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
src/: cache.py  celery_app.py  dependencies.py  lifespan.py  schemas.py  settings.py  tasks.py
src/api/v1/: api.py
src/api/v1/routers/: orders.py  products.py  reports.py
src/db/: base.py  utils.py
src/db/migrations/: env.py
src/db/migrations/versions/: 0eb419ed3bb8_init_db.py  24d2b7164eef_init_db.py  767141cb3a3c_init_db.py  9e672b85d469_init_db.py
src/db/models/: orders.py  products.py
src/schemas/: orders.py  products.py  reports.py
src/services/: orders.py  products.py  reports.py
